--- a/main.html
+++ b/main.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <form method="post">
+       
+        <input type="text" id="name" placeholder="Name" required>
+        <input type="email" id="email" placeholder="Email" required>
+        <input type="radio" id="gender_m, gender_f" required>
+        <input type="Select" id="cars" placeholder="--Please choose an option--" required>
+        <input type="Number" id="age" placeholder="age" required>
+        <input type="date" id="dob" placeholder="DOB" required>
+        <input type="tel" id="tel" placeholder="xxx-xxx-xxxx">
+        <input type="password"  id="password" required placeholder="password">
+        <input type="Checkbox"  id="tos" required>
+        <button>submit</button>
+    </form>
 </body>
-
 </html>
