--- a/main.html
+++ b/main.html
@@ -7,15 +7,23 @@
 </head>
 <body>
     <form method="post">
-       
+       <label for="name">Name</label>
         <input type="text" id="name" placeholder="Name" required>
+        <label for="email">Email</label>
         <input type="email" id="email" placeholder="Email" required>
+        <label for="gender_m, gender_f">Gender</label>
         <input type="radio" id="gender_m, gender_f" required>
+        <label for="cars">Car Brands</label>
         <input type="Select" id="cars" placeholder="--Please choose an option--" required>
+        <label for="age">Age</label>
         <input type="Number" id="age" placeholder="age" required>
+        <label for="dob">DOB</label>
         <input type="date" id="dob" placeholder="DOB" required>
+        <label for="tel">Telephone</label>
         <input type="tel" id="tel" placeholder="xxx-xxx-xxxx">
+        <label for="password">Password</label>
         <input type="password"  id="password" required placeholder="password">
+        <label for="tos">I agree to the TOS	</label>
         <input type="Checkbox"  id="tos" required>
         <button>submit</button>
     </form>
