--- a/main.html
+++ b/main.html
@@ -12,7 +12,10 @@
         <label for="email">Email</label>
         <input type="email" id="email" placeholder="Email" required>
         <label for="gender_m, gender_f">Gender</label>
-        <input type="radio" id="gender_m, gender_f" required>
+        <input type="radio" id="gender_m" required>
+        <label for="gender_m">Male</label>
+        <input type="radio" id="gender_f" required>
+        <label for="gender_f">Female</label>
         <label for="cars">Car Brands</label>
         <!-- <input type="Select" id="cars" placeholder="--Please choose an option--" required > -->
         <select id="cars" aria-placeholder="--Please choose an option--">
